<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name">DVBViewer Controller</string>
    <string name="remote">Remote</string>
    <string name="channel">Channel</string>
    <string name="channels">Channels</string>
    <string name="epg">EPG</string>
    <string name="settings">Settings</string>
    <string name="timer">Timers</string>
    <string name="loadingChannels">Loading Channels&#8230;</string>
    <string name="loading">Loading&#8230;</string>
    <string name="active_device">Active Device</string>
    <string name="recservicefailed">Failed to retrieve Recording Service</string>
    <string name="wifistate">Please check your WiFi state</string>
    <string name="select_device">Select Device</string>
    <string name="skip_selection">Skip</string>
    <string name="desc_channel_logo">Channel Logo</string>
    <string name="refresh">Refresh</string>
    <string name="loadingTimers">Loading Timers…</string>
    <string name="delete">Delete</string>
    <string name="demo_device">Demo Device</string>
    <string name="menu">Menu</string>
    <string name="service_name">Service Name</string>
    <string name="ip_address">192.168.1.1</string>
    <string name="port">8000</string>
    <string name="timer_name">Timername</string>
    <string name="timer_time">20:15</string>
    <string name="timer_add">Add Timer</string>
    <string name="timer_info">Information</string>
    <string name="timer_date">Date and Time</string>
    <string name="timer_action">Action</string>
    <string name="timer_after">Afterwards</string>
    <string name="review">Review</string>
    <string name="name">Name</string>
    <string name="example_text">Example</string>
    <string name="priority">Priority</string>
    <string name="priority_example">50</string>
    <string name="timer_enabled">Timer Enabled</string>
    <string name="set_date">Set Date</string>
    <string name="set_start_time">Set Start Time</string>
    <string name="set_end_time">Set End Time</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="review_empty_text">(None)</string>
    <string name="confirm_header">Please confirm</string>
    <string name="confirm">Confirm</string>
    <string name="review_do">Review</string>
    <string name="finish">Finish</string>
    <string name="record">Record</string>
    <string name="set_channel">Set channel</string>
    <string name="power_off">Power Off</string>
    <string name="standby">Standby</string>
    <string name="hibernate">Hibernate</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- Label for button to confirm chosen date or time [CHAR LIMIT=30] -->
    <string name="done_label">Done</string>
    <!--
         Content description for the hour selector in the time picker, which displays
         selectable hours of the day along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="hour_picker_description">Hours circular slider</string>
    <!--
         Content description for the minute selector in the time picker, which displays
         selectable five-minute intervals along the inside edge of a circle, as in an analog clock.
         [CHAR LIMIT=50]
    -->
    <string name="minute_picker_description">Minutes circular slider</string>
    <!-- Accessibility announcement for hour circular picker [CHAR LIMIT=NONE] -->
    <string name="select_hours">Select hours</string>
    <!-- Accessibility announcement for minute circular picker [CHAR LIMIT=NONE] -->
    <string name="select_minutes">Select minutes</string>

    <!--
        Content description for the month and day selector in the date picker, which displays
        a selectable grid of days laid out by month.
        [CHAR LIMIT=50]
     -->
    <string name="day_picker_description">Month grid of days</string>
    <!--
        Content description for the year selector in the date picker, which displays
        a scrolling, vertical list of years.
        [CHAR LIMIT=50]
     -->
    <string name="year_picker_description">Year list</string>
    <!-- Accessibility announcement for the day picker [CHAR LIMIT=NONE] -->
    <string name="select_day">Select month and day</string>
    <!-- Accessibility announcement for the year picker [CHAR LIMIT=NONE] -->
    <string name="select_year">Select year</string>
    <!-- Accessibility description for the item that is currently selected. -->
    <string name="item_is_selected"><xliff:g id="item" example="2013">%1$s</xliff:g> selected</string>
    <!-- Accessibility announcement when a number that had been typed in is deleted [CHAR_LIMIT=NONE] -->
    <string name="deleted_key"><xliff:g id="key" example="4">%1$s</xliff:g> deleted</string>

    <!-- DO NOT TRANSLATE -->
    <string name="time_placeholder">--</string>
    <!-- DO NOT TRANSLATE -->
    <string name="time_separator">:</string>

    <!-- DO NOT TRANSLATE -->
    <string name="radial_numbers_typeface">sans-serif</string>
    <!-- DO NOT TRANSLATE -->
    <string name="sans_serif">sans-serif</string>

    <!-- DO NOT TRANSLATE -->
    <string name="day_of_week_label_typeface">sans-serif</string>
    <string name="recserviceConfigFail">Recording Service not configured correctly</string>
</resources>
