<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/WizardPageContainer">

    <TextView
        style="@style/WizardPageTitle"
        android:id="@android:id/title"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/WizardFormLabel"
                android:text="@string/name"/>

            <EditText
                android:id="@+id/timer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:inputType="textCapWords"
                android:hint="@string/example_text"
                android:layout_marginBottom="16dp"/>

            <TextView
                style="@style/WizardFormLabel"
                android:text="@string/priority"/>

            <EditText
                android:id="@+id/timer_priority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:saveEnabled="false"
                android:inputType="numberSigned"
                android:hint="@string/priority_example"
                android:layout_marginBottom="16dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                        style="@style/WizardFormLabel"
                        android:text="@string/timer_enabled"/>

                <CheckBox
                        android:id="@+id/timer_enabled"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
