<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/DVBActionBar">
        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/DVBShadow"
            android:text="@string/active_device"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            />

        <Button
            android:id="@+id/active_profile"
            style="?android:actionButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center_vertical"
            android:textAppearance="@android:style/TextAppearance.Holo.Widget.ActionBar.Title.Inverse"
            android:textSize="22sp"
            android:textColor="@android:color/white"
            android:text="@string/demo_device"
            android:paddingLeft="30dp"
            android:drawableRight="@drawable/ic_action_change_profile"
            />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/DVBShadow"
            android:text="@string/menu"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            />

        <ListView
            android:id="@+id/menu_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            />
</LinearLayout>