<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              style="@style/WizardPageContainer">

    <TextView
            style="@style/WizardPageTitle"
            android:id="@android:id/title"
            />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/timer_date_layout"
                    android:background="@drawable/list_selector"
                    android:layout_marginBottom="10dp">

                <TextView
                        style="@style/WizardFormLabel"
                        android:text="@string/set_date"/>

                <TextView
                        style="@style/WizardFormLabel"
                        android:id="@+id/timer_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:saveEnabled="false"
                        android:layout_marginBottom="16dp"/>

            </LinearLayout>

            <LinearLayout
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/timer_timestart_layout"
                    android:background="@drawable/list_selector"
                    android:layout_marginBottom="10dp">

                <TextView
                        style="@style/WizardFormLabel"
                        android:text="@string/set_start_time"/>

                <TextView
                        style="@style/WizardFormLabel"
                        android:id="@+id/timerstart_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:saveEnabled="false"
                        android:layout_marginBottom="16dp"/>

            </LinearLayout>

            <LinearLayout
                    android:clickable="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/timer_timeend_layout"
                    android:background="@drawable/list_selector"
                    android:layout_marginBottom="10dp">

                <TextView
                        style="@style/WizardFormLabel"
                        android:text="@string/set_end_time"/>

                <TextView
                        style="@style/WizardFormLabel"
                        android:id="@+id/timerend_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:saveEnabled="false"
                        android:layout_marginBottom="16dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
